--- a/boilerplates/frontendv1/package.json
+++ b/boilerplates/frontendv1/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "front-end",
-  "version": "0.1.0",
+  "name": "boilerplate-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.26.1",
-    "chart.js": "^4.3.0",
-    "primeflex": "^3.1.3",
-    "primeicons": "^5.0.0",
-    "primereact": "^7.2.1",
+    "axios": "^1.6.0",
+    "primereact": "^10.0.0",
+    "primeicons": "^6.0.0",
+    "primeflex": "^3.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.0",
     "react-snap": "^1.23.0",
     "react-transition-group": "^4.4.2"
